Ver 0.1.0 Формат Даних сторінок

--- a/src/main/resources/templates/403.html
+++ b/src/main/resources/templates/403.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Access Denied</title>
+    <title>У доступі відмовлено</title>
     <link rel="stylesheet" type="text/css" th:href="@{/styles.css}">
 </head>
 
@@ -11,8 +11,8 @@
 <th:block th:include="/_header"></th:block>
 <th:block th:include="/_menu"></th:block>
 
-<div class="page-title">Access Denied!</div>
-<h3 style="color:red;">Sorry, you can not access this page!</h3>
+<div class="page-title">Доступ закрито!</div>
+<h3 style="color:red;">Вибачте, ви не можете переглянути цю сторінку!</h3>
 
 <th:block th:include="/_footer"></th:block>
 
