--- a/src/main/resources/templates/_footer.html
+++ b/src/main/resources/templates/_footer.html
@@ -1,7 +1,8 @@
 <div class="footer-container" xmlns:th="http://www.thymeleaf.org">
-
-    @Copy right <a rel="stylesheet" th:href="@{/policy}"></a>
-    <a rel="stylesheet" target="_self">SportShop</a>
+    <meta charset="UTF-8">
+    <p> Моя сторінка. Всі права захищені <a rel="stylesheet" href="/policy">Політика конфіденційності</a>
+    <a rel="stylesheet" target="_self" href="/">SportShop</a>
+    </p>
     <br>
 
 
