--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Інтернет магазин спортивного одягу</title>
-    <link rel="stylesheet" type="text/css" th:href="@{/styles.css}" />
+
 </head>
 <body>
 <th:block th:include="/_header"></th:block>
 <th:block th:include="/_menu"></th:block>
 
-<div class="page-title">Кошик покупок</div>
+<div class="page-title">Корзина покупок</div>
 <div class="demo-container">
     <h3>Домашня сторінка</h3>
     <ul>
