--- a/src/main/resources/templates/accountInfo.html
+++ b/src/main/resources/templates/accountInfo.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Account Info</title>
+    <title>Інформація про Акаунт</title>
     <link rel="stylesheet" type="text/css" th:href="@{/styles.css}">
 </head>
 <body>
@@ -10,12 +10,12 @@
 <th:block th:include="/_header"></th:block>
 <th:block th:include="/_menu"></th:block>
 
-<div class="page-title">Account Info</div>
+<div class="page-title">Інформація про Акаунт</div>
 <div class="account-container">
     <ul>
-        <li>User Name: <span th:utext="${#request.userPrincipal.name}"></span></li>
+        <li>Ім'я користувача: <span th:utext="${#request.userPrincipal.name}"></span></li>
         <li>
-            Role:
+            Роль:
             <ul>
                 <li th:each="auth : ${userDetails.authorities}" th:utext="${auth.authority}"></li>
             </ul>
