--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -2,26 +2,26 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Product List</title>
+    <title>Інформація про замовлення</title>
     <link rel="stylesheet" type="text/css" th:href="@{/styles.css}">
 </head>
 <body>
 <th:block th:include="/_header"></th:block>
 <th:block th:include="/_menu"></th:block>
 
-<div class="page-title">Order Info</div>
+<div class="page-title">Інформація про замовлення</div>
 
 <div class="customer-info-container">
-    <h3>Customer Information:</h3>
+    <h3>Інформація про замовника:</h3>
     <ul>
-        <li>Name: <span th:utext="${orderInfo.customerName}"></span></li>
+        <li>Назва: <span th:utext="${orderInfo.customerName}"></span></li>
         <li>Email: <span th:utext="${orderInfo.customerEmail}"></span></li>
-        <li>Phone: <span th:utext="${orderInfo.customerPhone}"></span></li>
-        <li>Address: <span th:utext="${orderInfo.customerAddress}"></span></li>
+        <li>Телефон: <span th:utext="${orderInfo.customerPhone}"></span></li>
+        <li>Адреса: <span th:utext="${orderInfo.customerAddress}"></span></li>
     </ul>
-    <h3>Order Summary:</h3>
+    <h3>Сума замовлення:</h3>
     <ul>
-        <li>Total:
+        <li>Разом:
             <span class="total" th:utext="${#numbers.formatDecimal(orderInfo.amount,3,2,'COMMA')}">
                </span>
         </li>
@@ -30,11 +30,11 @@
 <br/>
 <table border="1" style="width:100%">
     <tr>
-        <th>Product Code</th>
-        <th>Product Name</th>
-        <th>Quantity</th>
-        <th>Price</th>
-        <th>Amount</th>
+        <th>Код продукту</th>
+        <th>Назва продукту</th>
+        <th>Кількість</th>
+        <th>Ціна</th>
+        <th>Сума</th>
     </tr>
     <tr th:each="orderDetailInfo : ${orderInfo.details}">
         <td th:utext="${orderDetailInfo.productCode}"></td>
