--- a/src/main/resources/templates/orderList.html
+++ b/src/main/resources/templates/orderList.html
@@ -2,24 +2,23 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Product List</title>
+    <title>Список замовлень</title>
     <link rel="stylesheet" type="text/css" th:href="@{/styles.css}">
 </head>
 <body>
 <th:block th:include="/_header"></th:block>
 <th:block th:include="/_menu"></th:block>
 
-<div class="page-title">Order List</div>
-<div>Total Order Count: <span th:utext="${paginationResult.totalRecords}"></span></div>
+<div class="page-title">Список замовлень</div>
+<div>Загальна кількість замовлень: <span th:utext="${paginationResult.totalRecords}"></span></div>
 <table border="1" style="width:100%">
     <tr>
-        <th>Order Num</th>
-        <th>Order Date</th>
-        <th>Customer Name</th>
-        <th>Customer Address</th>
-        <th>Customer Email</th>
-        <th>Amount</th>
-        <th>View</th>
+        <th>Номер замовлення</th>
+        <th>Час замовлення</th>
+        <th>Назва замовлення</th>
+        <th>Адреса замовника</th>
+        <th>Email замовника</th>
+        <th>Сума</th>
     </tr>
     <tr th:each="orderInfo : ${paginationResult.list}">
         <td th:utext="${orderInfo.orderNum}"></td>
@@ -29,7 +28,6 @@
         <td th:utext="${orderInfo.customerEmail}"></td>
         <td style="color:red;" th:utext="${#numbers.formatDecimal(orderInfo.amount,3,2,'COMMA')}">
         </td>
-        <td><a th:href="@{|/admin/order?orderId=${orderInfo.id}|}">View</a></td>
     </tr>
 </table>
 <div class="page-navigator" th:if="${paginationResult.totalPages > 1}" >
