--- a/src/main/resources/templates/policy.html
+++ b/src/main/resources/templates/policy.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8">
     <title>Політика конфіденційності</title>
     <link rel="stylesheet" type="text/css" th:href="@{/styles.css}" />
+
 </head>
 <body>
+<th:block th:include="/_header"></th:block>
+<th:block th:include="/_menu"></th:block>
 <p>
 PRIVACY POLICY
     WHO WE ARE
@@ -83,5 +86,8 @@ WHAT THIRD PARTIES WE RECEIVE DATA FROM
 WHAT AUTOMATED DECISION MAKING AND/OR PROFILING WE DO WITH USER DATA
 INDUSTRY REGULATORY DISCLOSURE REQUIREMENTS
 </p>
+
+<th:block th:include="/_footer"></th:block>
+
 </body>
 </html>
