--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Product</title>
+    <title>Продукти</title>
     <link rel="stylesheet" type="text/css" th:href="@{/styles.css}">
 </head>
 <body>
@@ -10,7 +10,7 @@
 <th:block th:include="/_header"></th:block>
 <th:block th:include="/_menu"></th:block>
 
-<div class="page-title">Product</div>
+<div class="page-title">Продукт</div>
 <div th:if="${errorMessage!= null}" class="error-message" th:utext="${errorMessage}">
 </div>
 
@@ -18,9 +18,9 @@
        method="POST" enctype="multipart/form-data">
     <table style="text-align:left;">
         <tr>
-            <td>Code *</td>
+            <td>код продукту *</td>
             <td style="color:red;">
-                <input th:field="*{newProduct}" type="hidden" />
+                <input th:field="*{Новий продукт}" type="hidden" />
                 <input th:if="${productForm.newProduct}" type="text"
                        th:field="*{code}" />
                 <th:block th:if="${!productForm.newProduct}">
@@ -33,36 +33,36 @@
             </td>
         </tr>
         <tr>
-            <td>Name *</td>
+            <td>Назва *</td>
             <td><input th:field="*{name}"  /></td>
             <td>
                 <span class="error-message" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">..</span>
             </td>
         </tr>
         <tr>
-            <td>Price *</td>
+            <td>Ціна *</td>
             <td><input th:field="*{price}"  /></td>
             <td>
                 <span class="error-message" th:if="${#fields.hasErrors('price')}" th:errors="*{price}">..</span>
             </td>
         </tr>
         <tr>
-            <td>Image</td>
+            <td>Зображення</td>
             <td>
                 <img th:src="@{|/productImage?code=${productForm.code}|}" width="100"/>
             </td>
             <td> </td>
         </tr>
         <tr>
-            <td>Upload Image</td>
+            <td>Завантажити зображення</td>
             <td><input type="file" th:field="*{fileData}" /></td>
             <td> </td>
         </tr>
         <tr>
             <td>&nbsp;</td>
             <td>
-                <input type="submit" value="Submit" />
-                <input type="reset" value="Reset" />
+                <input type="submit" value="Підтвердити" />
+                <input type="reset" value="Скидання" />
             </td>
         </tr>
     </table>
