--- a/src/main/resources/templates/shoppingCart.html
+++ b/src/main/resources/templates/shoppingCart.html
@@ -9,11 +9,11 @@
 <th:block th:include="/_header"></th:block>
 <th:block th:include="/_menu"></th:block>
 
-<div class="page-title">My Cart</div>
+<div class="page-title">Корзина</div>
 
 <th:block th:if="${cartForm == null || cartForm.cartLines == null || cartForm.cartLines.empty}">
-    <h2>There is no items in Cart</h2>
-    <a th:href="@{/productList}">Show Product List</a>
+    <h2>У кошику немає товарів</h2>
+    <a th:href="@{/productList}">Список покупок</a>
 </th:block>
 
 <th:block th:if="${cartForm != null && cartForm.cartLines != null && !cartForm.cartLines.empty}">
@@ -25,41 +25,41 @@
                 <li><img class="product-image"
                          th:src="@{|/productImage?code=${cartLineInfo.productInfo.code}|}" />
                 </li>
-                <li>Code: <span th:utext="${cartLineInfo.productInfo.code}"></span>
+                <li>код продукту: <span th:utext="${cartLineInfo.productInfo.code}"></span>
                     <input type="hidden"
-                           th:name="|cartLines[${varStatus.index}].productInfo.code|"
+                           th:name="|cartLines${varStatus.index}.productInfo.code|"
                            th:value="${cartLineInfo.productInfo.code}" />
                 </li>
-                <li>Name: <span th:utext="${cartLineInfo.productInfo.name}"></span></li>
-                <li>Price:
+                <li>Назва: <span th:utext="${cartLineInfo.productInfo.name}"></span></li>
+                <li>Ціна:
                     <span class="price"
                           th:utext="${#numbers.formatDecimal(cartLineInfo.productInfo.price,3,2,'COMMA')}">
                         </span>
                 </li>
-                <li>Quantity:
+                <li>Кількість:
                     <input
                             th:name="|cartLines[${varStatus.index}].quantity|"
                             th:value="${cartLineInfo.quantity}" />
                 </li>
-                <li>Subtotal:
+                <li>Сума:
                     <span class="subtotal"
                           th:utext="${#numbers.formatDecimal(cartLineInfo.amount,3,2,'COMMA')}">
                         </span>
                 </li>
                 <li>
                     <a th:href="@{|/shoppingCartRemoveProduct?code=${cartLineInfo.productInfo.code}|}">
-                        Delete
+                        Видалити
                     </a>
                 </li>
             </ul>
         </div>
 
         <div style="clear: both"></div>
-        <input class="button-update-sc" type="submit" value="Update Quantity" />
+        <input class="button-update-sc" type="submit" value="Підтвердити кількість" />
         <a class="navi-item"
-           th:href="@{/shoppingCartCustomer}">Enter Customer Info</a>
+           th:href="@{/shoppingCartCustomer}">Введіть інформацію про замовника</a>
         <a class="navi-item"
-           th:href="@{/productList}">Continue Buy</a>
+           th:href="@{/productList}">Продовжити покупки</a>
     </form>
 </th:block>
 
