--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -2,8 +2,18 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Продукти</title>
-    <link rel="stylesheet" type="text/css" th:href="@{/styles.css}">
+    <title>Продукт</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/lux/bootstrap.min.css">
+    <style>
+        .product-preview-container input {
+            width: 50px;
+        }
+        .product-image {
+            width: 120px;
+            height: 80px;
+        }
+
+    </style>
 </head>
 <body>
 
