--- a/src/main/resources/templates/403.html
+++ b/src/main/resources/templates/403.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
     <meta charset="UTF-8">
     <title>У доступі відмовлено</title>
@@ -9,7 +10,7 @@
 <body style="background: #ededf6">
 
 <th:block th:include="/_header"></th:block>
-<!--<th:block th:include="/_menu"></th:block>-->
+<th:block th:include="/_menu"></th:block>
 
 <div class="page-title">Доступ закрито!</div>
 <h3 style="color:red;">Вибачте, ви не можете переглянути цю сторінку!</h3>
