--- a/src/main/resources/templates/_header.html
+++ b/src/main/resources/templates/_header.html
@@ -4,6 +4,8 @@
      <title>Спортивний одяг</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/lux/bootstrap.min.css">
+
+
     </header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <a class="navbar-brand" th:href="@{/}">SportShop</a>
@@ -14,7 +16,7 @@
 
         <div class="collapse navbar-collapse" id="navbarColor01">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" th:href="@{/}">Головна сторінка
                         <span class="sr-only">(current)</span>
                     </a>
@@ -49,7 +51,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <th:block sec:authorize="!isAuthenticated()">
+                    <th:block sec:authorize="isAuthenticated()">
                         <a  class="nav-link"  th:href="@{/admin/logout}">Вихід</a>
                     </th:block></a>
                 </li>
@@ -61,10 +63,7 @@
                     </a>
                 </th:block>
             </li>
-            <!--<form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-            </form>-->
+
         </div>
     </nav>
 </div>
