--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <th:block th:include="/_header"></th:block>
-<!--<th:block th:include="/_menu"></th:block>-->
+<th:block th:include="/_menu"></th:block>
 
 <div class="page-title">Інформація про замовлення</div>
 
