--- a/src/main/resources/templates/productList.html
+++ b/src/main/resources/templates/productList.html
@@ -4,59 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Product List</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/lux/bootstrap.min.css">
-
-
 </head>
-<body class="text-center">
+<body>
 <th:block th:include="/_header"></th:block>
-<!--<th:block th:include="/_menu"></th:block>-->
+<th:block th:include="/_menu"></th:block>
 
-<div class="page-title">Каталог продуктів</div>
+<div class="page-title">Product List</div>
 
-<div class="product-preview-container, text-center" th:each="prodInfo : ${paginationProducts.list}">
-
-    <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-        <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
-            <div class="my-3 py-3">
-                <h2 class="display-5"><li>Код продукту: <span th:utext="${prodInfo.code}"></span></li></h2>
-                <h2 class="display-5"><li>Назва: <span th:utext="${prodInfo.name}"></span></li></h2>
-                <p class="lead"><li>Ціна: <span th:utext="${#numbers.formatDecimal(prodInfo.price,3,2,'COMMA')}"></span></li></p>
-            </div>
-            <div class="bg-light shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
-            <p class="lead text-center"><a th:href="@{|/buyProduct?code=${prodInfo.code}|}">Купити зараз</a></p>
-        </div>
-        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
-            <div class="my-3 p-3">
-                <h2 class="display-5"><li>Код продукту: <span th:utext="${prodInfo.code}"></span></li></h2>
-                <h2 class="display-5"><li>Назва: <span th:utext="${prodInfo.name}"></span></li></h2>
-                <p class="lead"><li>Ціна: <span th:utext="${#numbers.formatDecimal(prodInfo.price,3,2,'COMMA')}"></span></li></p>
-            </div>
-            <div class="bg-dark shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
-            <p class="lead text-center"><a th:href="@{|/buyProduct?code=${prodInfo.code}|}">Купити зараз</a></p>
-        </div>
-
-    </div>
-
-
-
-
+<div class="product-preview-container" th:each="prodInfo : ${paginationProducts.list}">
     <ul>
         <li><img class="product-image"
                  th:src="@{|/productImage?code=${prodInfo.code}|}" /></li>
-
-        <li>Назва: <span th:utext="${prodInfo.name}"></span></li>
-        <li>Ціна: <span th:utext="${#numbers.formatDecimal(prodInfo.price,3,2,'COMMA')}"></span></li>
+        <li>Code: <span th:utext="${prodInfo.code}"></span></li>
+        <li>Name: <span th:utext="${prodInfo.name}"></span></li>
+        <li>Price: <span th:utext="${#numbers.formatDecimal(prodInfo.price,3,2,'COMMA')}"></span></li>
         <li>
-            <a th:href="@{|/buyProduct?code=${prodInfo.code}|}">Купити зараз</a>
+            <a th:href="@{|/buyProduct?code=${prodInfo.code}|}">Buy Now</a>
         </li>
         <!-- For Manager edit Product -->
-        <th:block sec:authorize="hasAuthority('ROLE_MANAGER')">
+        <th:block sec:authorize="hasAuthority('ROLE_ADMIN')">
             <li>
                 <a style="color:red;"
-                   th:href="@{|/admin/product?code=${prodInfo.code}|}">Редагувати продукт</a>
-
-
+                   th:href="@{|/admin/product?code=${prodInfo.code}|}">Edit Product</a>
             </li>
         </th:block>
     </ul>
@@ -73,50 +42,6 @@
 
     </th:block>
 </div>
-
-
-
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Bootstrap CSS -->
-    <link href="путь_до/bootstrap.min.css" rel="stylesheet">
-    <!-- fancyBox CSS -->
-    <link href="путь_до/jquery.fancybox.min.css" rel="stylesheet">
-    <style>
-        img {
-            padding: 4px;
-            background-color: #fff;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-        }
-
-        img:hover {
-            opacity: 0.6;
-            filter: alpha(opacity=60);
-        }
-    </style>
-
-
-<div class="container">
-    <div class="grid">
-        <a data-fancybox="gallery" href="img.C02.jpg">
-            <img class="img-fluid" src="путь_к_уменьшенной_копии_изображения" alt="...">
-        </a>
-        <a data-fancybox="gallery" href="img.C02.jpg">
-            <img class="img-fluid" src="img.C02.jpg" alt="">
-        </a>
-        ...
-    </div>
-</div>
-
-
-
-
-
-
-
-
-
-
 
 <th:block th:include="/_footer"></th:block>
 
