--- a/src/main/resources/templates/shoppingCart.html
+++ b/src/main/resources/templates/shoppingCart.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Корзина</title>
-    <link rel="stylesheet" type="text/css" th:href="@{/styles.css}">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/lux/bootstrap.min.css">
 </head>
 <body>
 <th:block th:include="/_header"></th:block>
@@ -13,10 +13,11 @@
 
 <th:block th:if="${cartForm == null || cartForm.cartLines == null || cartForm.cartLines.isEmpty()}">
     <h2>У кошику немає товарів</h2>
-    <a th:href="@{/productList}">Список покупок</a>
+    <a th:href="@{/productList}">Перегляд списка продуктів</a>
 </th:block>
 
-<th:block th:if="${cartForm != null && cartForm.cartLines != null && !cartForm.cartLines.isEmpty()}">
+
+<th:block th:if="${cartForm != null && cartForm.cartLines != null && !cartForm.cartLines.empty}">
     <form method="POST" th:object="${cartForm}" th:action="@{/shoppingCart}">
 
         <div class="product-preview-container"
@@ -25,45 +26,44 @@
                 <li><img class="product-image"
                          th:src="@{|/productImage?code=${cartLineInfo.productInfo.code}|}" />
                 </li>
-                <li>код продукту: <span th:utext="${cartLineInfo.productInfo.code}"></span>
+                <li>Code: <span th:utext="${cartLineInfo.productInfo.code}"></span>
                     <input type="hidden"
-                           th:name="|cartLines${varStatus.index}.productInfo.code|"
+                           th:name="|cartLines[${varStatus.index}].productInfo.code|"
                            th:value="${cartLineInfo.productInfo.code}" />
                 </li>
-                <li>Назва: <span th:utext="${cartLineInfo.productInfo.name}"></span></li>
-                <li>Ціна:
+                <li>Name: <span th:utext="${cartLineInfo.productInfo.name}"></span></li>
+                <li>Price:
                     <span class="price"
                           th:utext="${#numbers.formatDecimal(cartLineInfo.productInfo.price,3,2,'COMMA')}">
                         </span>
                 </li>
-                <li>Кількість:
+                <li>Quantity:
                     <input
-                            th:name="|cartLines${varStatus.index}.quantity|"
+                            th:name="|cartLines[${varStatus.index}].quantity|"
                             th:value="${cartLineInfo.quantity}" />
                 </li>
-                <li>Сума:
+                <li>Subtotal:
                     <span class="subtotal"
                           th:utext="${#numbers.formatDecimal(cartLineInfo.amount,3,2,'COMMA')}">
                         </span>
                 </li>
                 <li>
                     <a th:href="@{|/shoppingCartRemoveProduct?code=${cartLineInfo.productInfo.code}|}">
-                        Видалити
+                        Delete
                     </a>
                 </li>
             </ul>
         </div>
 
         <div style="clear: both"></div>
-        <input class="button-update-sc" type="submit" value="Підтвердити кількість" />
+        <input class="button-update-sc" type="submit" value="Update Quantity" />
         <a class="navi-item"
-           th:href="@{/shoppingCartCustomer}">Введіть інформацію про замовника</a>
+           th:href="@{/shoppingCartCustomer}">Enter Customer Info</a>
         <a class="navi-item"
-           th:href="@{/productList}">Продовжити покупки</a>
+           th:href="@{/productList}">Continue Buy</a>
     </form>
 </th:block>
 
 <th:block th:include="/_footer"></th:block>
-
 </body>
 </html>
