--- a/src/main/resources/templates/shoppingCartFinalize.html
+++ b/src/main/resources/templates/shoppingCartFinalize.html
@@ -8,7 +8,7 @@
 <body>
 
 <th:block th:include="/_header"></th:block>
-<!--<th:block th:include="/_menu"></th:block>-->
+<th:block th:include="/_menu"></th:block>
 
 <div class="page-title">Купівля</div>
 <div class="container">
