--- a/src/main/resources/templates/shoppingCartFinalize.html
+++ b/src/main/resources/templates/shoppingCartFinalize.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <title>Завершення покупки</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/lux/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/css/main.css">
+
 </head>
 <body>
-
 <th:block th:include="/_header"></th:block>
 <th:block th:include="/_menu"></th:block>
 
