--- a/src/main/resources/templates/403.html
+++ b/src/main/resources/templates/403.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <title>У доступі відмовлено</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/lux/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
+          crossorigin="anonymous">
 </head>
 
 <body style="background: #ededf6">
@@ -16,6 +19,8 @@
 <h3 style="color:red;">Вибачте, ви не можете переглянути цю сторінку!</h3>
 
 <th:block th:include="/_footer"></th:block>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+        crossorigin="anonymous"></script>
 </body>
 </html>
