--- a/src/main/resources/templates/_footer.html
+++ b/src/main/resources/templates/_footer.html
@@ -1,8 +1,8 @@
 <div class="footer-container" xmlns:th="http://www.thymeleaf.org">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/lux/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/css/main.css">
     <footer class="mt-5 py-4 text-center border-top bg-primary text-white">
-        <div class="container">
         <div class="row">
             <div class="col-12"><p>Наш онлайн інтернет магазин <a style="color: #c5d7f2"th:href="@{/}" rel="noopener" target="_blank">SportShop</a>,
                 <a style="color: #0dcaf0" href="https://itstep.org" rel="noopener nofollow" target="_blank">ItStep</a>,
