--- a/src/main/resources/templates/_menu.html
+++ b/src/main/resources/templates/_menu.html
@@ -2,27 +2,22 @@
      xmlns:th="http://www.thymeleaf.org"
      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4" >
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/lux/bootstrap.min.css">
-    <a th:href="@{/}">Меню</a>
-    |
-    <a th:href="@{/productList}">
-        Каталог продуктів
-    </a>
-    |
-    <a th:href="@{/shoppingCart}">
-        Корзина
-    </a>
-    |
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
+          crossorigin="anonymous">
+
+        <a class="btn btn-primary" style="color: #0dcaf0" th:href="@{/productList}">Каталог продуктів</a>
+
+        <a class="btn btn-primary" style="color: #0dcaf0" th:href="@{/shoppingCart}">Корзина</a>
+
     <th:block sec:authorize="hasAnyRole('ROLE_ADMIN')">
-        <a th:href="@{/admin/orderList}">
-            Список замовлень
-        </a>
-        |
+        <a class="btn btn-primary" style="color: #0dcaf0" th:href="@{/admin/orderList}">Список замовлень</a>
     </th:block>
+
     <th:block sec:authorize="hasRole('ROLE_ADMIN')">
-        <a th:href="@{/admin/product}">
-            Створити продукт
-        </a>
-        |
-    </th:block>
+        <a class="btn btn-primary" style="color: #0dcaf0" th:href="@{/admin/product}">Створити продукт</a>
+        </th:block>
+
+
 </div>
