--- a/src/main/resources/templates/accountInfo.html
+++ b/src/main/resources/templates/accountInfo.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Інформація про Акаунт</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/lux/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/css/main.css">
 </head>
 <body>
 
@@ -16,9 +17,10 @@
         <li>Ім'я користувача: <span th:utext="${#request.userPrincipal.name}"></span></li>
         <li>
             Роль:
-            <ul>
-                <li style="color: #6a1a21" th:each="auth : ${userDetails.authorities}" th:utext="${auth.authority}"></li>
-            </ul>
+
+            <a class="nav-link" th:href="@{/admin/accountInfo}" th:utext="${#request.userPrincipal.name}">
+            </a>
+
         </li>
         <th:block sec:authorize="isAuthenticated()">
             <a  class="nav-link"  th:href="@{/admin/logout}">Вихід</a>
@@ -28,5 +30,8 @@
 
 <th:block th:include="/_footer"></th:block>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+        crossorigin="anonymous"></script>
 </body>
 </html>
