--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,25 +1,34 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="">
 <head>
     <meta charset="UTF-8">
     <title>Інтернет магазин спортивного одягу</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/lux/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
+          crossorigin="anonymous">
 
 </head>
-<body>
+<body style="background-color: #b4b4b4">
 <th:block th:include="/_header"></th:block>
+
 <th:block th:include="/_menu"></th:block>
 
-<div class="page-title">Корзина покупок</div>
-<div class="demo-container">
-    <h3>Домашня сторінка</h3>
-    <ul>
-        <a th:href="@{/productList}"><li th:href="@{/productList}">Покупки онлайн </li></a>
-
-    </ul>
+<div class="jumbotron" >
+    <h1 class="display-3" style="text-align: center">Раді вітати Вас у Sport Shop</h1>
+    <p class="lead">У нашому магазині представлені найкращі лінійки спортивного одягу від кращих відомих виробників.
+        </p>
+    <hr class="my-4">
+    <p>Adidas Nike UMBRO Spandi Acics Reebok Diadora Korn та інші</p>
+    <p class="lead2">
+        <a class="btn btn-primary btn-lg " style="color: #0dcaf0" th:href="@{/productList}">Перейти до покупок</a>
+    </p>
 </div>
 
 <th:block th:include="/_footer"></th:block>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+        crossorigin="anonymous"></script>
 </body>
 </html>
