--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,18 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Авторизація</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/lux/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
+          crossorigin="anonymous">
+
     <th:block th:include="/_header"></th:block>
+    <th:block th:include="/_menu"></th:block>
 </head>
 <body class="text-center" style="background: #bcbebf">
-<th:block th:include="/_menu"></th:block>
+
 <br>
 <br>
 <th:block th:if="${#session != null && #session.getAttribute('SPRING_SECURITY_LAST_EXCEPTION') != null}">
     <div th:if= "${#request.getParameter('error') == 'true'}"
          style="color: red; margin: 10px 0px;">
         Авторизація невдала!!!<br /> Причина :
-        <span th:utext="${#session.getAttribute('SPRING_SECURITY_LAST_EXCEPTION').massege}"></span>
+        <span th:utext="${#session.getAttribute('SPRING_SECURITY_LAST_EXCEPTION').message}"></span>
     </div>
 </th:block>
 
@@ -35,17 +40,19 @@
                 <input type="checkbox" value="remember-me"> Запамятати мене
             </label>
         </div>
-        <button class="w-5 btn btn-light btn-primary" type="submit" value="Авторизація">Авторизація</button>
-        <button class="w-5 btn btn-light btn-primary" type="reset" value="Скинути">Скинути</button>
+        <button class="btn btn-primary" style="color: #0dcaf0" type="submit" value="Авторизація">Авторизація</button>
+        <button class="btn btn-primary" style="color: #0dcaf0" type="reset" value="Скинути">Скинути</button>
 
 
     </form>
 </main>
-<span class="error-message" th:utext="${error}"></span>
+<span class="error-message" th:utext="${Error}"></span>
 
 
 <th:block th:include="/_footer"></th:block>
 
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+        crossorigin="anonymous"></script>
 </body>
 </html>
