--- a/src/main/resources/templates/orderList.html
+++ b/src/main/resources/templates/orderList.html
@@ -4,7 +4,10 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
     <meta charset="UTF-8">
     <title>Список замовлень</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/lux/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
+          crossorigin="anonymous">
 </head>
 <body>
 <th:block th:include="/_header"></th:block>
@@ -12,7 +15,8 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 
 <div class="page-title">Список замовлень</div>
 <div>Загальна кількість замовлень: <span th:utext="${paginationResult.totalRecords}"></span></div>
-<table border="1" style="width:100%">
+
+<table border="2" style="width:98%;">
     <tr>
         <th>Номер замовлення</th>
         <th>Час замовлення</th>
@@ -20,16 +24,21 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
         <th>Адреса замовника</th>
         <th>Email замовника</th>
         <th>Сума</th>
+        <th></th>
     </tr>
     <tr th:each="orderInfo : ${paginationResult.list}">
-        <td th:utext="${orderInfo.orderNum}"></td>
+        <td  th:utext="${orderInfo.orderNum}"></td>
         <td th:utext="${#dates.format(orderInfo.orderDate,'dd-MM-yyyy HH:mm')}"></td>
         <td th:utext="${orderInfo.customerName}"></td>
         <td th:utext="${orderInfo.customerAddress}"></td>
         <td th:utext="${orderInfo.customerEmail}"></td>
         <td style="color:red;" th:utext="${#numbers.formatDecimal(orderInfo.amount,3,2,'COMMA')}">
         </td>
-        <td><a th:href="@{|/admin/order?orderId=${orderInfo.id}|}">Перегляд деталей</a></td>
+        <td>
+            <button type="button" class="btn btn-success">
+                <a th:href="@{|/admin/order?orderId=${orderInfo.id}|}">Перегляд деталей</a>
+            </button>
+            </td>
     </tr>
 </table>
 <div class="page-navigator" th:if="${paginationResult.totalPages > 1}" >
@@ -42,6 +51,8 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 </div>
 
 <th:block th:include="/_footer"></th:block>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+        crossorigin="anonymous"></script>
 </body>
 </html>
