--- a/src/main/resources/templates/payment.html
+++ b/src/main/resources/templates/payment.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <title>Оплата</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/lux/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/css/main.css">
+
     <th:block th:include="/_header"></th:block>
 </head>
 <body>
@@ -26,6 +28,11 @@
         <p>Use <a th:href="@{/productList}">Перейти до Каталогу продукції</a></p>
     </div>
 </main>
-</body>
+
 <th:block th:include="/_footer"></th:block>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
