--- a/src/main/resources/templates/policy.html
+++ b/src/main/resources/templates/policy.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Політика конфіденційності</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/lux/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/css/main.css">
 
 </head>
 <body style="background: #ededf6">
@@ -13,7 +14,7 @@
 <p>
 PRIVACY POLICY
     WHO WE ARE
-Our website address is: https://garantmet.com.ua.
+Our website address is: https://sportshop.com.ua.
 
 WHAT PERSONAL DATA WE COLLECT AND WHY WE COLLECT IT COMMENTS
 When visitors leave comments on the site we collect the data shown in the comments form,
