--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -3,17 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Продукт</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/lux/bootstrap.min.css">
-    <style>
-        .product-preview-container input {
-            width: 50px;
-        }
-        .product-image {
-            width: 120px;
-            height: 80px;
-        }
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
+          crossorigin="anonymous">
 
-    </style>
 </head>
 <body>
 
@@ -49,6 +43,27 @@
                 <span class="error-message" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">..</span>
             </td>
         </tr>
+      <tr>
+            <td>Бренд *</td>
+            <td><input th:field="*{brand}"  /></td>
+            <td>
+                <span class="error-message" th:if="${#fields.hasErrors('brand')}" th:errors="*{brand}">..</span>
+            </td>
+        </tr>
+        <tr>
+            <td>Колір *</td>
+            <td><input th:field="*{color}"  /></td>
+            <td>
+                <span class="error-message" th:if="${#fields.hasErrors('color')}" th:errors="*{color}">..</span>
+            </td>
+        </tr>
+        <tr>
+            <td>Розмір *</td>
+            <td><input th:field="*{size}"  /></td>
+            <td>
+                <span class="error-message" th:if="${#fields.hasErrors('size')}" th:errors="*{size}">..</span>
+            </td>
+        </tr>
         <tr>
             <td>Ціна *</td>
             <td><input th:field="*{price}"  /></td>
@@ -57,7 +72,7 @@
             </td>
         </tr>
         <tr>
-            <td>Зображення</td>
+            <td>Зображнення</td>
             <td>
                 <img th:src="@{|/productImage?code=${productForm.code}|}" width="100"/>
             </td>
@@ -65,14 +80,14 @@
         </tr>
         <tr>
             <td>Завантажити зображення</td>
-            <td><input type="file" th:field="*{fileData}" /></td>
+            <td><input type="file" th:field="*{fileData}"/></td>
             <td> </td>
         </tr>
         <tr>
             <td>&nbsp;</td>
             <td>
-                <input type="submit" value="Підтвердити" />
-                <input type="reset" value="Скидання" />
+                <input class="btn btn-primary btn-sm d-inline-block w-50 mb-2" type="submit" value="Підтвердити" />
+                <input class="btn btn-primary btn-sm d-inline-block w-50 mb-2" type="reset" value="Скидання" />
             </td>
         </tr>
     </table>
