--- a/src/main/resources/templates/productList.html
+++ b/src/main/resources/templates/productList.html
@@ -3,34 +3,50 @@
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
     <meta charset="UTF-8">
-    <title>Product List</title>
+    <title>Каталог продуктів</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/lux/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/css/main.css">
+
 </head>
 <body>
 <th:block th:include="/_header"></th:block>
 <th:block th:include="/_menu"></th:block>
 
-<div class="page-title">Product List</div>
+
+<h1><div class="page-title">Каталог продуктів</div></h1>
 
 <div class="product-preview-container" th:each="prodInfo : ${paginationProducts.list}">
-    <ul>
-        <li><img class="product-image"
-                 th:src="@{|/productImage?code=${prodInfo.code}|}" /></li>
-        <li>Code: <span th:utext="${prodInfo.code}"></span></li>
-        <li>Name: <span th:utext="${prodInfo.name}"></span></li>
-        <li>Price: <span th:utext="${#numbers.formatDecimal(prodInfo.price,3,2,'COMMA')}"></span></li>
-        <li>
-            <a th:href="@{|/buyProduct?code=${prodInfo.code}|}">Buy Now</a>
-        </li>
-        <!-- For Manager edit Product -->
-        <th:block sec:authorize="hasAuthority('ROLE_ADMIN')">
-            <li>
-                <a style="color:red;"
-                   th:href="@{|/admin/product?code=${prodInfo.code}|}">Edit Product</a>
-            </li>
-        </th:block>
+    <ul style="list-style-type: none">
+        <div class="col-lg-3 col-md-4 col-sm-6 px-2 mb-4">
+            <div class="card product-card">
+                <div class="product-card-actions col-md-2 d-block align-items-center">
+                </div><a class="card-img-top d-block overflow-hidden" th:each="prodInfo : ${paginationProducts.list}"></a>
+                <img class="product-image"
+                     th:src="@{|/productImage?code=${prodInfo.code}|}" /></div>
+                <li>Код: <span th:utext="${prodInfo.code}"></span></li>
+                <li>Назва: <span th:utext="${prodInfo.name}"></span></li>
+                <li>Бренд: <span th:utext="${prodInfo.brand}"></span></li>
+                <li>Колір: <span th:utext="${prodInfo.color}"></span></li>
+                <li>Розмір: <span th:utext="${prodInfo.size}"></span></li>
+                <li>Ціна: <span th:utext="${#numbers.formatDecimal(prodInfo.price,3,2,'COMMA')}"></span></li>
+                <!-- Для редагування Адміністратором -->
+                <th:block sec:authorize="hasAuthority('ROLE_ADMIN')">
+                    <li>
+                        <a class="btn btn-primary btn-sm d-block w-100 mb-4" style="color:green;"
+                           th:href="@{|/admin/product?code=${prodInfo.code}|}">Редагувати продукт</a>
+                    </li>
+                    <li>
+                        <a class="btn btn-primary btn-sm d-block w-100 mb-4" style="color:red;"
+                           th:href="@{|/admin/delete/product?code=${prodInfo.code}|}">Видалити продукт</a>
+                    </li>
+                    </li>
+                </th:block>
+                        <a class="btn btn-primary btn-sm d-block w-100 mb-4" style="color: #0dcaf0"
+                           th:href="@{|/buyProduct?code=${prodInfo.code}|}">Купити</a></button>
+
+        </div>
     </ul>
 </div>
-
 <br/>
 <div class="page-navigator" th:if="${paginationProducts.totalPages > 1}">
     <th:block th:each="page : ${paginationProducts.navigationPages}">
@@ -38,12 +54,12 @@
         <a th:href="@{|/productList?page=${page}|}" th:if="${page != -1}"
            class="nav-item" th:utext="${page}"></a>
 
-        <span class="nav-item" th:if="${page == -1}"> ... </span>
+        <span class="nav-item" th:if="${page == -1}"> >>> </span>
 
     </th:block>
 </div>
 
-<th:block th:include="/_footer"></th:block>
-
 </body>
+<th:block th:include="/_footer"></th:block>
+        </div>
 </html>
