--- a/src/main/resources/templates/shoppingCart.html
+++ b/src/main/resources/templates/shoppingCart.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8">
     <title>Корзина</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/lux/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/css/main.css">
 </head>
 <body>
 <th:block th:include="/_header"></th:block>
 <th:block th:include="/_menu"></th:block>
 
-<div class="page-title">Корзина</div>
-
 <th:block th:if="${cartForm == null || cartForm.cartLines == null || cartForm.cartLines.isEmpty()}">
     <h2>У кошику немає товарів</h2>
-    <a th:href="@{/productList}">Перегляд списка продуктів</a>
+    <a th:href="@{/productList}">Перегляд списку продуктів</a>
 </th:block>
 
 
@@ -22,45 +21,45 @@
 
         <div class="product-preview-container"
              th:each="cartLineInfo, varStatus : ${cartForm.cartLines}">
-            <ul>
+            <ul style="list-style-type: none">
                 <li><img class="product-image"
                          th:src="@{|/productImage?code=${cartLineInfo.productInfo.code}|}" />
                 </li>
-                <li>Code: <span th:utext="${cartLineInfo.productInfo.code}"></span>
+                <li>Код: <span th:utext="${cartLineInfo.productInfo.code}"></span>
                     <input type="hidden"
                            th:name="|cartLines[${varStatus.index}].productInfo.code|"
                            th:value="${cartLineInfo.productInfo.code}" />
                 </li>
-                <li>Name: <span th:utext="${cartLineInfo.productInfo.name}"></span></li>
-                <li>Price:
+                <li>Назва: <span th:utext="${cartLineInfo.productInfo.name}"></span></li>
+                <li>Ціна:
                     <span class="price"
                           th:utext="${#numbers.formatDecimal(cartLineInfo.productInfo.price,3,2,'COMMA')}">
                         </span>
                 </li>
-                <li>Quantity:
+                <li>Кількість:
                     <input
                             th:name="|cartLines[${varStatus.index}].quantity|"
                             th:value="${cartLineInfo.quantity}" />
                 </li>
-                <li>Subtotal:
+                <li>Пісумок:
                     <span class="subtotal"
                           th:utext="${#numbers.formatDecimal(cartLineInfo.amount,3,2,'COMMA')}">
                         </span>
                 </li>
                 <li>
                     <a th:href="@{|/shoppingCartRemoveProduct?code=${cartLineInfo.productInfo.code}|}">
-                        Delete
+                        Видалити
                     </a>
                 </li>
             </ul>
         </div>
 
         <div style="clear: both"></div>
-        <input class="button-update-sc" type="submit" value="Update Quantity" />
+        <input class="button-update-sc" type="submit" value="Додати в корзину" />
         <a class="navi-item"
-           th:href="@{/shoppingCartCustomer}">Enter Customer Info</a>
+           th:href="@{/shoppingCartCustomer}">Введіть свої дані</a>
         <a class="navi-item"
-           th:href="@{/productList}">Continue Buy</a>
+           th:href="@{/productList}">Продовжити покупки</a>
     </form>
 </th:block>
 
