Ver 0.1.5 Верстка каталогу продуктів і форм покупок

--- a/src/main/resources/static/css/bootstrap.css
+++ b/src/main/resources/static/css/bootstrap.css
@@ -5287,7 +5287,7 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .jumbotron {
-  background-image: url(img/C01.jpg);
+  background-image: url(../img/C01.jpg);
   background-position: center;
   background-size: inherit;
   padding: 2rem 1rem;
