--- a/src/main/resources/templates/_header.html
+++ b/src/main/resources/templates/_header.html
@@ -60,15 +60,11 @@
                 </li>
 
             </ul>
-          <!--  <li class="nav-item">
-                <th:block sec:authorize="isAuthenticated()">
-                    <a class="nav-link" th:href="@{/admin/accountInfo}" th:utext="${#request.userPrincipal.name}">
-                    </a>
-                </th:block>
-            </li>-->
-            <form class="form-inline my-2 my-lg-0">
+
+           <!-- <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="text" placeholder="Search">
                 <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+                -->
             </form>
         </div>
     </nav>
