--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,32 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <title>Інтернет магазин спортивного одягу</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
-          rel="stylesheet"
-          integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
-          crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/lux/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/css/main.css">
 
+
+<style>
+    .main{
+background: url(../static/img/sport-center1.jpg) no-repeat center center ;
+    -webkit-background-size: cover ;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+        height: 600px;
+        border-radius: 2px;
+        border: 1px solid rgba(210, 200, 200, 0.46);
+    }
+    html{
+    background: url(../static/img/background_003.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    image-rendering: smooth;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+    .btn{
+        font-size: 17px;
+        position: static;
+        margin-left: 80px;
+        width: 250px;
+        height: 50px;
+    }
+    .lead{
+        font-size: 25px;
+    }
+    p{
+        font-size: 35px;
+    }
+
+
+
+</style>
 </head>
-<body style="background-color: #b4b4b4">
+<body>
 <th:block th:include="/_header"></th:block>
-
 <th:block th:include="/_menu"></th:block>
 
-<div class="jumbotron" >
+<div class="main">
+         <div class="block1">
     <h1 class="display-3" style="text-align: center">Раді вітати Вас у Sport Shop</h1>
     <p class="lead">У нашому магазині представлені найкращі лінійки спортивного одягу від кращих відомих виробників.
         </p>
     <hr class="my-4">
-    <p>Adidas Nike UMBRO Spandi Acics Reebok Diadora Korn та інші</p>
+    <p >Adidas, Nike, UMBRO, Sprandi, Acics, Reebok, Diadora, Korn та інші</p>
     <p class="lead2">
-        <a class="btn btn-primary btn-lg " style="color: #0dcaf0" th:href="@{/productList}">Перейти до покупок</a>
+        <a class="btn btn-primary btn-sm " style="color: cyan" th:href="@{/productList}">Перейти до покупок</a>
     </p>
+        </div>
 </div>
 
-<th:block th:include="/_footer"></th:block>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
-        crossorigin="anonymous"></script>
+<th:block th:include="/_footer"></th:block>
 </body>
 </html>
