--- a/src/main/resources/templates/productList.html
+++ b/src/main/resources/templates/productList.html
@@ -4,25 +4,61 @@
 <head>
     <meta charset="UTF-8">
     <title>Каталог продуктів</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/lux/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/css/main.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
+          crossorigin="anonymous">
 
+    <style>
+
+        h1{
+            text-align: center;
+        }
+     .product-preview-container {
+         padding: 0px;
+         width: 275px;
+         max-width: 400px;
+         margin: 10px ;
+         display: inline-block;
+         text-align:left;
+         position: relative;
+     }
+        btn:hover {
+             opacity: 70;
+
+         }
+     .product-image{
+         width: 250px;
+         height: 200px;
+         max-width: 400px;
+         position: static;
+         left: 0px;
+         top: 0px;
+         margin-left: -20px;
+         margin-top: 10px;
+     }
+     .btn{
+         position: center;
+         margin-left: -25px;
+         width: 230px;
+     }
+     .nav-item{
+      color: #0939aa;
+     text-decoration-style: solid;
+
+     }
+    </style>
 </head>
 <body>
 <th:block th:include="/_header"></th:block>
 <th:block th:include="/_menu"></th:block>
 
-
 <h1><div class="page-title">Каталог продуктів</div></h1>
-
-<div class="product-preview-container" th:each="prodInfo : ${paginationProducts.list}">
-    <ul style="list-style-type: none">
-        <div class="col-lg-3 col-md-4 col-sm-6 px-2 mb-4">
-            <div class="card product-card">
-                <div class="product-card-actions col-md-2 d-block align-items-center">
-                </div><a class="card-img-top d-block overflow-hidden" th:each="prodInfo : ${paginationProducts.list}"></a>
-                <img class="product-image"
-                     th:src="@{|/productImage?code=${prodInfo.code}|}" /></div>
+<div class="product-preview-container shadow-lg " th:each="prodInfo : ${paginationProducts.list}">
+    <ul class="products clearfix">
+              <a class="card-img-top d-block overflow-hidden" th:each="prodInfo : ${paginationProducts.list}"></a>
+                <img class="product-image shadow-lg"
+                     th:src="@{|/productImage?code=${prodInfo.code}|}" />
                 <li>Код: <span th:utext="${prodInfo.code}"></span></li>
                 <li>Назва: <span th:utext="${prodInfo.name}"></span></li>
                 <li>Бренд: <span th:utext="${prodInfo.brand}"></span></li>
@@ -31,20 +67,22 @@
                 <li>Ціна: <span th:utext="${#numbers.formatDecimal(prodInfo.price,3,2,'COMMA')}"></span></li>
                 <!-- Для редагування Адміністратором -->
                 <th:block sec:authorize="hasAuthority('ROLE_ADMIN')">
-                    <li>
-                        <a class="btn btn-primary btn-sm d-block w-100 mb-4" style="color:green;"
+
+                        <a class="btn btn-primary btn-sm d-block w-100 mb-3" style="color:green;"
                            th:href="@{|/admin/product?code=${prodInfo.code}|}">Редагувати продукт</a>
-                    </li>
-                    <li>
-                        <a class="btn btn-primary btn-sm d-block w-100 mb-4" style="color:red;"
+
+                        <a class="btn btn-primary btn-sm d-block w-100 mb-3" style="color:red;"
                            th:href="@{|/admin/delete/product?code=${prodInfo.code}|}">Видалити продукт</a>
-                    </li>
-                    </li>
+
+
                 </th:block>
-                        <a class="btn btn-primary btn-sm d-block w-100 mb-4" style="color: #0dcaf0"
+
+
+
+                        <a class="btn btn-primary btn-sm d-block w-100 mb-3 " style="color: #0dcaf0"
                            th:href="@{|/buyProduct?code=${prodInfo.code}|}">Купити</a></button>
 
-        </div>
+
     </ul>
 </div>
 <br/>
@@ -58,7 +96,6 @@
 
     </th:block>
 </div>
-
 </body>
 <th:block th:include="/_footer"></th:block>
         </div>
